[gd_scene load_steps=7 format=2]

[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://death_screen.gd" type="Script" id=2]
[ext_resource path="res://OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gameicons/PNG/White/2x/trophy.png" type="Texture" id=4]
[ext_resource path="res://gameicons/PNG/White/2x/multiplayer.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_color = Color( 1, 0.0431373, 0.0431373, 1 )
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 270.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.760784 )

[node name="Button" type="Button" parent="."]
margin_left = 59.0
margin_top = 550.0
margin_right = 196.0
margin_bottom = 584.0
custom_colors/font_color = Color( 1, 0.419608, 0.419608, 1 )
text = "play again?"

[node name="text_label" type="Label" parent="."]
margin_left = 26.0
margin_top = 74.0
margin_right = 253.0
margin_bottom = 288.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Roei livni moment"
align = 1

[node name="text_label2" type="Label" parent="."]
margin_left = 26.0
margin_top = 195.0
margin_right = 253.0
margin_bottom = 409.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "leaderboard"
align = 1

[node name="TextEdit" type="TextEdit" parent="text_label2"]
margin_left = 60.0
margin_top = 33.0
margin_right = 219.0
margin_bottom = 61.0
highlight_current_line = true

[node name="Label" type="Label" parent="text_label2"]
margin_left = -13.0
margin_top = 41.0
margin_right = 55.0
margin_bottom = 55.0
text = "username:"

[node name="set_username_text" type="Label" parent="text_label2"]
visible = false
margin_left = -13.0
margin_top = 339.0
margin_right = 274.0
margin_bottom = 356.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "please set a username to upload your scores"

[node name="score" type="Label" parent="."]
margin_left = 142.0
margin_top = 155.0
margin_right = 182.0
margin_bottom = 169.0

[node name="score2" type="Label" parent="."]
margin_left = 46.0
margin_top = 155.0
margin_right = 86.0
margin_bottom = 169.0
custom_colors/font_color = Color( 0.988235, 1, 0, 1 )
text = "score:"

[node name="high_score" type="Label" parent="."]
margin_left = 142.0
margin_top = 181.0
margin_right = 182.0
margin_bottom = 195.0

[node name="high_score_text" type="Label" parent="."]
margin_left = 46.0
margin_top = 181.0
margin_right = 112.0
margin_bottom = 195.0
custom_colors/font_color = Color( 0.988235, 1, 0, 1 )
text = "highscore:"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest_post" type="HTTPRequest" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 36.0
margin_top = 262.0
margin_right = 227.0
margin_bottom = 534.0
color = Color( 0.556863, 0.521569, 0.521569, 0.45098 )

[node name="leaderboard_Text" type="Label" parent="ColorRect2"]
margin_right = 191.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.00784314, 1, 0, 1 )
text = "connecting to server...."

[node name="Multiplayer" type="Sprite" parent="ColorRect2"]
position = Vector2( 160, 7 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="Trophy" type="Sprite" parent="ColorRect2"]
visible = false
position = Vector2( -15, 5 )
scale = Vector2( 0.25875, 0.25875 )
texture = ExtResource( 4 )

[node name="change_username_button" type="Button" parent="."]
visible = false
margin_left = 59.0
margin_top = 506.0
margin_right = 184.0
margin_bottom = 526.0
text = "change username"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="focus_entered" from="text_label2/TextEdit" to="." method="_on_TextEdit_focus_entered"]
[connection signal="text_changed" from="text_label2/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest_post" to="." method="_on_HTTPRequest_post_request_completed"]
[connection signal="pressed" from="change_username_button" to="." method="_on_change_username_button_pressed"]
